cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_35.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/xcbc_enc.c:69: error: DEAD_STORE
  The value written to &iv (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/xcbc_enc.c:69:9: Write of unused value
67.       } else {
68.           c2l(iv, xor0);
69.           c2l(iv, xor1);
              ^
70.           for (l -= 8; l > 0; l -= 8) {
71.               c2l(in, tin0);
